--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Find your train!
-  p Select your train below to see its current schedule.
+  p Select your train below to see its current schedule. Hey I just added some more stuff to this page to validate my pipeline. 
   #wrapper
     #trainList
       h2 Trains
